objects/BMCServiceDesk__Normalization_Transaction_Master__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Normalization_Transaction_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Approved_DateTime__c</fullName>
        <label>Approved DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Exception_Age__c</fullName>
        <description>This formula field calculates the time based on the current date minus the date when the exception was generated</description>
        <formula>ROUND((NOW()- CreatedDate),0)</formula>
        <label>Exception Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCMDB_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMDB Class</label>
        <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
        <relationshipLabel>CMDB Class</relationshipLabel>
        <relationshipName>CMDB_Class</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKNormalization_Metadata__c</fullName>
        <label>Normalization Metadata</label>
        <referenceTo>BMCServiceDesk__Normalization_Metadata__c</referenceTo>
        <relationshipLabel>Normalization Transaction Master</relationshipLabel>
        <relationshipName>Normalization_Transaction_Master</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Field_Value__c</fullName>
        <label>Field_Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>